[package]
name = "fcgi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
fastcgi-client = "0.8.0"
nom = "7.1.3"
tokio = { version = "1.25.0", features = ["net", "io-std", "rt", "macros", "rt-multi-thread", "fs"] }
url = "2.3.1"

[[bin]]
name = "fcgi"
path = "src/main.rs"
